# catsay

./: Cargo.toml  catfile.txt  stderr.txt
src/: main.rs
tests/: integration_test.rs
