[package]
name = "catsay"
version = "0.1.0"
edition = "2021"

license = "MIT  OR  Apache-2.0"
description = "A catsay clone, but cooler."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
human-panic = "1.2.1"
predicates = "3.0.4"
